Tôi chỉnh sửa header của trang index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Git and Github</title>
 </head>
 <body>
-    <h1>Dự án BTTH 02</h1>
+    <div id="header">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio eum voluptatem ipsum praesentium quos reiciendis, recusandae aperiam, facere amet dolores sequi error voluptates officiis aut suscipit tempora dolorum modi architecto?</p>
 
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio eum voluptatem ipsum praesentium quos reiciendis, recusandae aperiam, facere amet dolores sequi error voluptates officiis aut suscipit tempora dolorum modi architecto?</p>
+    </div>
+
 </body>
 </html>
