--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="header">
-        <h1>tran ngoc binh</h1>
+        <h1>Trần Ngọc Bình</h1>
+        <p>Tôi cũng chỉnh sửa vào đây</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio eum voluptatem ipsum praesentium quos reiciendis, recusandae aperiam, facere amet dolores sequi error voluptates officiis aut suscipit tempora dolorum modi architecto?</p>
         <p>Tôi lại gõ thêm vào để cho bạn Bình biết</p>
     </div>
